<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exo03Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleExo"
        android:text="@string/title_app_03"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_choice"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btn_exo_03_red"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_red"
        android:backgroundTint="#BF0019"
        />

    <Button
        android:id="@+id/btn_exo_03_green"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_green"
        android:backgroundTint="#4CAF50"
        />

    <Button
        android:id="@+id/btn_exo_03_orange"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_orange"
        android:backgroundTint="#FF842C"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing"/>

    <Button
        android:id="@+id/btn_exo_03_cancel"
        android:minWidth="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_cancel"
        android:backgroundTint="@color/blue"
        />

</LinearLayout>